# paddle-ocr-api

./: .gitignore  README.md  build_binary.py  main.py  pyproject.toml  reasonix.toml  requirements-gpu.txt  requirements.txt
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
deploy/: install.sh  paddle-ocr-api.service  start.sh
ocrWeb/: index.html  package.json  vite.config.ts
ocrWeb/src/: App.vue  style.css
ocrWeb/src/components/: ImageViewer.vue  ResultsPanel.vue  UploadArea.vue
paddle_ocr_api/: app.py
static/: index.html
static/assets/: index-BkzK0Krf.css  index-ChyNP_78.js
tests/: generate_test_images.py
